2017.01.11 ver2.8.9 - Bug fix about tree_view_set_focus in FC + database query.
	            - Added "NED" for database query.
	            - Layout change in FC window.
	            - Added an interactive dialog to add an object in the
	              object list tree_view.
	            - Added MAST Portal for web database access.

2017.01.09 ver2.8.8 - Interactive search of SIMBAD querried object in FC.
	              (Left click on searched objects).

2017.01.05 ver2.8.7 - Added GALEX (Far/Near UV) and WISE (4ch) in FC.
	            - Bug fix in SIMBAD ID seach for standard and FC objects.
                          '+' => "%2b"  and  ' ' => "%20"
	            - Added SkyView RGB composite in FC.
	              Three sources can be selected in the properties window.
	            - Added 2-color composite for Skyview RGB composite.
	              G is an average of R & B.
	            - Added image source descriptions for RGB composite on FC.
	            - gdk_window_invalidate_rect() for progress bar update.
	            - Changed the directory where hskymon.ini is saved to
	              %APPDATA%\hskymon\ in Windows version.
	            - Crrected implicit declarations.

2016.12.29 ver2.8.6 - Changed catalog matching criteria SIMBAD into
	              "region(box,..." style.
	            - Parameter setups for SIMBAD catalog matching.
	            - SDSS access changed DR12 -> DR13
	            - SIMBAD Catalog Matching function implemented into the GUI
	              of FC.
	            - Fixed a bug on Catalog Matching with a flipped image.

2016.12.27 ver2.8.5 - Added proper motion info for standard and finding chart
	              objects.
	            - Added OPE Def. button in finding chart object list.
	            - Added "copy to clipboard for OPE Def. button in standard
	              and finding chart object lists.
	            - These OPE Def. coordinates automatically calculate proper