@@ -4,6 +4,7 @@
 	            - Added an interactive dialog to add an object in the
 	              object list tree_view.
 	            - Added MAST Portal for web database access.
+	            - Adjusted focus movements amoung Obj.list, FC, and SkyMon.
 
 2017.01.09 ver2.8.8 - Interactive search of SIMBAD querried object in FC.
 	              (Left click on searched objects).
